# hermes-starter-kit

./: CHANGELOG.md  LICENSE  NOTICES.md  README.md  manifest.yaml  release-please-config.json
.github/workflows/: acceptance.yml  pr-title-lint.yml  promote-stable.yml  release-please.yml
docs/: CONNECTORS.md  PROVIDERS.md  TROUBLESHOOTING.md
recipes/: add-an-mcp-server.yaml  create-a-skill.yaml  igem-assistant.yaml  onboarding.yaml  set-up-notion.yaml  summarize-pubmed.yaml  update-kit.yaml  weekly-lit-scan.yaml
scripts/: install.ps1  install.sh  update.sh
scripts/lib/: extract-paths.py  install-files.py  update-release-fields.py  verify.ps1  verify.sh
skills/codon-optimization/: SKILL.md  pyproject.toml  test_sequences.py
skills/codon-optimization/codonopt/: __init__.py  cli.py  core.py  organisms.py
skills/codon-optimization/tests/: test_core.py  test_real_sequences.py  validation_report.txt
skills/cultivarium-data/: SKILL.md
skills/cultivarium-data/reference/: cvm_genome.md  cvm_media_screen.md  cvm_methylation_gene.md  cvm_methylation_motif.md  cvm_mic90_raw_data.md  cvm_mic_analysis.md  cvm_ori_screen.md  cvm_strain.md  predicted_oxygen.md  predicted_ph.md  species.md  (+3 more)
skills/database-lookup/: SKILL.md
skills/genomespot-predictions/: SKILL.md
skills/gget/: SKILL.md
skills/igem-competition-helper/: SKILL.md  igem_training_data.jsonl
skills/igem-past-winners/: SKILL.md  igem_past_results.jsonl  igem_teams_index.jsonl
skills/igem-projects/: SKILL.md
skills/ncbi-datasets/: SKILL.md
skills/protrek-search/: SKILL.md
skills/pysam/: SKILL.md
(+8 files in other folders)
